--- a/LadyBird_Foundation/app/src/main/AndroidManifest.xml
+++ b/LadyBird_Foundation/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.LadyBird_Foundation"
         tools:targetApi="31">
         <activity
+            android:name=".Location"
+            android:exported="false" />
+        <activity
             android:name=".Admin_Dashboard"
             android:exported="false" />
         <activity
