--- a/LadyBird_Foundation/app/src/main/AndroidManifest.xml
+++ b/LadyBird_Foundation/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" /> <!-- Locations -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,6 +16,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.LadyBird_Foundation"
         tools:targetApi="31">
+        <activity
+            android:name=".admin_events"
+            android:exported="false" />
+        <activity
+            android:name=".admin_contact"
+            android:exported="false" />
         <activity
             android:name=".Location"
             android:exported="false" />
