Admin location and location working
Haven't got the map working but the addresses are displaying

--- a/LadyBird_Foundation/app/src/main/AndroidManifest.xml
+++ b/LadyBird_Foundation/app/src/main/AndroidManifest.xml
@@ -17,19 +17,19 @@
         android:theme="@style/Theme.LadyBird_Foundation"
         tools:targetApi="31">
         <activity
+            android:name=".adminLocation"
+            android:exported="false" />
+        <activity
             android:name=".Contact_Us"
             android:exported="false" />
         <activity
-            android:name=".admincontactus"
+            android:name=".admin_contact"
             android:exported="false" />
         <activity
             android:name=".adminaboutus"
             android:exported="false" />
         <activity
             android:name=".admin_events"
-            android:exported="false" />
-        <activity
-            android:name=".admin_contact"
             android:exported="false" />
         <activity
             android:name=".Location"
